# fabric

./: .dockerignore  .gitignore  Brewfile  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSING.md  Makefile  README.md  SECURITY.md  release.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
deploy/docker/: Dockerfile.agent  Dockerfile.cni  Dockerfile.controller
deploy/k8s/: 00-namespace.yaml  10-controller.yaml  20-agent.yaml  README.md
deploy/k8s/tls/: gen-pki.sh
docs/: ARCHITECTURE.md  TESTING.md
examples/: loadbalancer.toml  multitenant.toml  overlay.toml  router.toml  rules.toml  topology.toml
examples/cni/: 10-velstra.conflist  20-velstra-controller.conflist
examples/controller/: edge-1.toml  web-1.toml
scripts/: gen-certs.sh
tests/e2e/: README.md  cni-controller.sh  lib.sh  run.sh
velstra-app/: Cargo.toml  build.rs
velstra-app/src/: conntrack_sync.rs  controller_client.rs  firewall.rs  main.rs  wren.rs
velstra-cni/: Cargo.toml
velstra-cni/src/: cni.rs  controller.rs  ipam.rs  main.rs  net.rs
velstra-common/: Cargo.toml  README.md
velstra-common/src/: cidr.rs  config.rs  forward.rs  lb.rs  lib.rs  mac.rs  npt.rs  overlay.rs  packet.rs  parse.rs  policy.rs  reject.rs  srv6.rs
velstra-config/: Cargo.toml  README.md
velstra-config/src/: config.rs  lib.rs  proto_convert.rs
velstra-controller/: Cargo.toml
velstra-controller/src/: authz.rs  evpn.rs  main.rs  rest.rs  topology.rs
velstra-controller/tests/: rest_gateway.rs  serves_config.rs
velstra-ebpf/: Cargo.toml
velstra-ebpf/src/: main.rs
velstra-orchestrator/: Cargo.toml  README.md
velstra-orchestrator/src/: lib.rs
velstra-proto/: Cargo.toml  README.md  build.rs
velstra-proto/proto/: velstra.proto
velstra-proto/src/: lib.rs
velstra-raft/: Cargo.toml  README.md  build.rs
velstra-raft/proto/: raft.proto
velstra-raft/src/: lib.rs  network.rs  store.rs
