[package]
name = "velstra-ebpf"
version = "0.2.0"
edition.workspace = true
# GPL/MIT: this crate compiles to the in-kernel eBPF object, which must be
# GPL-compatible to call GPL-only BPF helpers (see the LICENSE marker in main.rs).
license = "GPL-2.0-or-later OR MIT"

[dependencies]
velstra-common = { path = "../velstra-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.2.0"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "velstra"
path = "src/main.rs"
