[package]
name = "velstra-raft"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
velstra-common = { path = "../velstra-common" }
velstra-config = { path = "../velstra-config" }
velstra-orchestrator = { path = "../velstra-orchestrator" }

openraft = { version = "0.9", features = ["serde", "storage-v2"] }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros", "time", "net"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true, default-features = true }
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[lints.clippy]
result_large_err = "allow"
